--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Start VS Code debugging via TCP socket on port 9999",
   "version": "1.0.0",
   "publisher": "vb000",
+  "icon": "icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/vb000/vscode-remote-debug-server"
